<resources>
    <string name="app_name">StudentHelper</string>
    <string name="stats">Statistics</string>
    <string name="flashcards">Flashcards</string>
    <string name="settings">Settings</string>
    <string name="settings_description">Settings Icon</string>
    <string name="add_flashcard">Add Flashcard</string>
    <string name="statistics">Statistics</string>


    <string name="access_token">1521054660257218560-UuS39faedkoYouVeHGZlyJwVhb69Cn</string>
    <string name="access_secret">A9Jr70nip8EXtP172wp2i34JjHHwycQGoX4R47NP9rkWf</string>
    <string name="consumer_key">wwxkvFyuBkq1DDhJ4U7sRQeSK</string>
    <string name="consumer_secret" translatable="false">PgBwJ3w9g8y4j8QQT9T0N9HD1cuGh5sBSkFYA4LdH5Bojz8tqR</string>
    <string name="twitter_callback_url">http://fake.website</string>
    <string name="question">Question</string>
    <string name="question_hint">Enter question here</string>
    <string name="answer">Answer</string>
    <string name="answer_hint">Enter answer here</string>
    <string name="title">Title</string>
    <string name="reminder_title_hint">Enter reminder\'s title</string>
    <string name="class_name">Class</string>
    <string name="class_hint">Enter class name</string>
    <string name="due_date">Due Date</string>
    <string name="date_hint">Enter due date (dd/mm/yyyy)</string>
    <string name="submit">Submit</string>
    <string name="username">Username:</string>
    <string name="name">Name</string>
    <string name="clear_flashcards">Clear Flashcards</string>
    <string name="clear_reminders">Clear Reminders</string>
    <string name="restart_time">Restart Time</string>
    <string name="reminders">Reminders</string>
    <string name="flashcard_content">Flashcard will appear here.</string>
    <string name="new_flashcard">+ New FlashCard</string>
    <string name="prev">Prev</string>
    <string name="next">Next</string>
    <string name="upcoming_work">Upcoming Work</string>
    <string name="high_priority">High Priority</string>
    <string name="other">Other</string>
    <string name="new_reminder">+ New Reminder</string>
    <string name="flashcards_total">Total number of flashcards</string>
    <string name="total_hint">Total</string>
    <string name="attributes_total">Total number of attributes</string>
    <string name="flashcards_attributes">All attributes</string>
    <string name="attributes_hint">Attributes</string>
    <string name="flashcards_time">Total time on flashcards</string>
    <string name="time_hint">Time</string>
    <string name="reminders_total">Total number of reminders</string>
    <string name="priority_reminder_total">Total number of priority reminders</string>
    <string name="priority_total">High-priority Total</string>
    <string name="low_priority_reminder_total">Total number of other reminders</string>
    <string name="non_priority_total">Low-priority Total</string>
    <string name="oldest_reminder">Oldest Reminder</string>
    <string name="reminder_hint">Reminder</string>
    <string name="newest_reminder">Newest Reminder</string>
    <string name="tweet">Tweet</string>
    <string name="tweet_hint">Tweet appears here</string>
    <string name="send_tweet">Send Tweet</string>
    <string name="countdown">Countdown</string>
    <string name="total_score">Total Score</string>
    <string name="average_success_rate">Average Success Rate</string>
    <string name="med_time">60</string>
    <string name="short_time">30</string>
    <string name="long_time">90</string>
    <string name="time_seconds">Time (Seconds)</string>
    <string name="difficulty">Difficulty</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="extreme">Extreme</string>
    <string name="restart_countdown">Restart Countdown Score</string>
    <string name="step_by_step">Step-by-Step</string>
    <string name="output_hint">Output appears here</string>
    <string name="restart">Restart</string>
    <string name="pass">Pass</string>
    <string name="time_countdown_hint">Time appears here</string>
    <string name="countdown_total_hint">Total number appears here</string>
    <string name="num1">num1</string>
    <string name="num2">num2</string>
    <string name="num3">num3</string>
    <string name="num4">num4</string>
    <string name="num5">num5</string>
    <string name="num6">num6</string>
    <string name="minus">-</string>
    <string name="add">+</string>
    <string name="multiply">*</string>
    <string name="divide">/</string>
    <string name="solution">Solution</string>

</resources>