<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    tools:context=".AddFlashcard">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|top"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/title"
            android:theme="@style/AppTheme.FlashcardEntries"
            />

        <EditText
            android:id="@+id/reminderTitleEntry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/reminder_title_hint"
            android:theme="@style/AppTheme.FlashcardEntries"
            android:layout_marginBottom="30dp"
            android:inputType="text"
            android:autofillHints=""
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/class_name"
            android:theme="@style/AppTheme.FlashcardEntries"
            />


        <EditText
            android:id="@+id/reminderClassEntry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/class_hint"
            android:theme="@style/AppTheme.FlashcardEntries"
            android:layout_marginBottom="30dp"
            android:inputType="text"
            android:autofillHints=""
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/due_date"
            android:theme="@style/AppTheme.FlashcardEntries"
            />


        <EditText
            android:id="@+id/reminderDateEntry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/date_hint"
            android:theme="@style/AppTheme.FlashcardEntries"
            android:layout_marginBottom="10dp"
            android:inputType="datetime"
            android:autofillHints=""
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            />

        <Button
            android:id="@+id/reminderSubmitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:layout_marginBottom="5dp"
            />
    </LinearLayout>

</ScrollView>