<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    tools:context=".AddFlashcard">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|top"
        android:orientation="vertical">

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question"
            android:theme="@style/AppTheme.FlashcardEntries"
            />

        <EditText
            android:id="@+id/questionEntry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/question_hint"
            android:theme="@style/AppTheme.FlashcardEntries"
            android:layout_marginBottom="30dp"
            android:inputType="text"
            android:autofillHints=""
            android:textColor="@color/white"
            android:textColorHint="@color/white"

            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer"
            android:theme="@style/AppTheme.FlashcardEntries"
            />


        <EditText
            android:id="@+id/answerEntry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/answer_hint"
            android:theme="@style/AppTheme.FlashcardEntries"
            android:layout_marginBottom="10dp"
            android:inputType="text"
            android:autofillHints=""
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            />

        <Button
            android:id="@+id/flashcardSubmitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:layout_marginBottom="5dp"
            />
    </LinearLayout>

</ScrollView>